--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Me Live Code</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
   </header>
   <main>
     <section>
-      <h3>Attractions</h3>
+      <h1>Attractions</h1>
       <div class="grid-container">
         <article class="card">
           <img src="https://www.melivecode.com/attractions/1.jpg" alt="Phi Phi Islands" style="width:100%">
@@ -53,8 +53,8 @@
       </div>
     </section>
     <section>
-      <h3>Contact Me Live Code</h3>
-      <h3>Send and email to melivecode@gmail.com</h3>
+      <h1>Contact Me Live Code</h1>
+      <h13>Send and email to melivecode@gmail.com</h1>
     </section>
   </main>
 </body>
